--- a/index.html
+++ b/index.html
@@ -12,13 +12,25 @@
   <p>See the Instructions tab for what to do.</p>
   <p>Add elements below.</p>
 
-<!--   a paragraph  -->
-<!--   a link  -->
-<!--   an image -->
-<!--   two headings, of different levels -->
-<!--   an unordered list -->
-<!--   an ordered list -->
-<!--   some emphasized and strongly emphasized text -->
+  <p>This is a paragraph</p>
+  <a href="https://example.com">This is a link to example.com</a>
+  <img src="example.jpeg" />
+  <h1>This is a top-level heading</h1>
+  <h2>This is a second-level heading</h2>
+  <ul>
+    <li>The first list item</li>
+    <li>The second list item</li>
+    <li>The third list item</li>
+  </ul>
+
+  <ol>
+    <li>First list item</li>
+    <li>Second list item</li>
+    <li>Third list item</li>
+  </ol>
+  
+  <em>This text is emphasized</em>
+  <strong>This text is strongly emphasized! Take note!</strong>
   
 </body>
 
